# jtagpp

./: .clang-format  CMakeLists.txt
data/: JEP106.csv
include/jtagpp/: Chain.hpp  Device.hpp  DeviceDB.hpp  FTDIInterface.hpp  Interface.hpp  JTAGInterface.hpp  Log.hpp  TAPController.hpp  XilinxFPGADevice.hpp  jtagpp.hpp  spimpl.hpp
include/jtagpp/private/: Chain_p.hpp  Device_p.hpp  FTDIInterface_p.hpp  Interface_p.hpp  JTAGInterface_p.hpp  TAPController_p.hpp  XilinxFPGADevice_p.hpp
jtagpp/: CMakeLists.txt  Chain.cpp  Device.cpp  FTDIInterface.cpp  Interface.cpp  JEP106.cpp  JTAGInterface.cpp  Log.cpp  TAPController.cpp  XilinxFPGADevice.cpp
tools/: CMakeLists.txt  jtagpp-debug.cpp
